# tinybio

./: .gitignore  BUGS.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: egpu_bottleneck_hunting_skill.md  multipanel_figures_skill.md  rasterize_benchmarks.md
examples/: hlca_pca.py  mouse_1m_pca.py  pbmc3k_pca.py  pbmc68k_pca.py  profile_tms.py  scale_2m.py  scale_study.py  tabula_muris_senis_pca.py
figures/: benchmark_gpu_vs_cpu.py  generate_benchmark_figures.py  generate_demo_plots.py  gpu_utils.py
tests/: test_hvg.py  test_normalize.py  test_pca.py
tinybio/: __init__.py  hvg.py  normalize.py  pca.py
